# RadioControlSoftware

./: .gitignore  .gitmodules  CMakeLists.txt  Joystick.cpp  Joystick.hpp  Makefile  README.md  adc.h  colorConvert.h  controller.h  ili9341.c  ili9341.h  ili9341gfx.c  label.cpp  label.hpp  lib.cpp  lib.hpp  main.c  main.cpp  main.ino  materialColors.h  model.h  rcLib.cpp  rcLib.hpp  run.c  stmpe610.c  strings.h  ui.h
Drivers/: ili9341.c  ili9341.h  ili9341gfx.c  stmpe610.c  stmpe610.h  sx127x.c  sx127x.h
Pages/: ncontroller.h  pages.hpp  uiMacros.hpp
RadioControlProtocol/: .gitignore  README.md  protocol.tex  rcLib.cpp  rcLib.hpp
Util/Controller/: Joystick.cpp  controller.c  controller.h  joystick.c  joystick.h  screen.h
Util/Controller/Screens/: calibrate.c  debug.c  flightmodes.c  flightmodes.h  rfinfo.c  rfinfo.h  settings.c  start.c  start.h  telemetry.c
Util/Controller/screens/: calibrate.c  calibrate.h  debug.c  debug.h  downlink.c  downlink.h  flightmodes.c  rfinfo.c  settings.c  settings.h  start.c  telemetry.c  telemetry.h
Util/Model/: model.c  model.h
Util/View/: colorconvert.c  colorconvert.h  colors.c  colors.h  label.c  label.h  materialcolors.h  strings.c  strings.h  ui.c  ui.h
Util/View/Elements/: button.c  button.h  label.c
drivers/: adc.c  uart.c  uart.h
hal/: LoRa.cpp  LoRa.h  ili9341.c  ili9341gfx.h  stmpe610.h
label/: label.cpp
util/: Joystick.cpp  Joystick.hpp  label.cpp  label.hpp
